force-app/main/default/objects/Admissions_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Teacher_Recommendation_Form_Link__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4688732?&amp;tfa_7024346772890=&quot;&amp;Teacher_Recommendation_Question_Set__c&amp;&quot;&amp;tfa_7024346773134=&quot;&amp;IF(Student_Name__r.US_Year_Group_Control__c = TRUE, &quot;Is US&quot;, &quot;&quot;)&amp;&quot;&amp;tfa_7024346773138=&quot;&amp;IF(School__c = &quot;The New York International School&quot;, &quot;NYIS&quot;, &quot;&quot;)&amp;&quot;&amp;tfa_7024346773149=&quot;&amp;Id&amp;&quot;&amp;tfa_ChildsName=&quot;&amp;Student_Name_Formula__c&amp;&quot;&amp;tfa_7024346772881=&quot;&amp;TEXT(Student_Name__r.Current_Age__c)&amp;&quot;&amp;tfa_7024346772882=&quot;&amp;TEXT(Student_Name__r.Nationality__c)&amp;&quot;&amp;tfa_PersonCompleting=&quot;&amp;Teachers_Name__c&amp;&quot;&amp;tfa_7024346772883=&quot;&amp;Teachers_Email__c&amp;&quot;&amp;tfa_7024346773162=&quot;&amp;Student_Name__r.Account.F_Info_Thank_You_Page_Logo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teacher Recommendation Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Recommendation_Question_Set__c</fullName>
        <description>Defines the questions to be included in the &apos;Teacher Recommendation&apos; form.</description>
        <formula>IF(
   OR( 
      TEXT(Student_Name__r.Year_Group__c) = &quot;PN&quot;,
      TEXT(Student_Name__r.Year_Group__c) = &quot;N&quot;,
      TEXT(Student_Name__r.Year_Group__c) = &quot;R&quot;,
      TEXT(Student_Name__r.Year_Group__c) = &quot;PK&quot;
      ),
   &quot;Pre&quot;,
   IF(   
      OR(
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y1&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y2&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y3&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y4&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y5&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;Y6&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;K&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;G1&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;G2&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;G3&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;G4&quot;,
         TEXT(Student_Name__r.Year_Group__c) = &quot;G5&quot;
         ),
      &quot;Pri&quot;,
      &quot;Sec&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teacher Recommendation Question Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Recommendation__c</fullName>
        <label>Teacher&apos;s Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Highly Recommend</fullName>
                </value>
                <value>
                    <fullName>Recommend</fullName>
                </value>
                <value>
                    <fullName>Recommend with Reservation</fullName>
                </value>
                <value>
                    <fullName>Do not Recommend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Teachers_Name__c</fullName>
        <inlineHelpText>This should be how the teacher should be addressed in any communication e.g Mr. Bloggs</inlineHelpText>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teachers_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teachers_School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Formula__c</fullName>
        <formula>TEXT(Date_and_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Teaching_Student__c</fullName>
        <label>Time Teaching Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>More than 1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <defaultValue>&quot;12:00&quot;</defaultValue>
        <label>Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_English_Speaking_Countries__c</fullName>
        <label>Time in English Speaking Countries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Writing__c</fullName>
        <label>Writing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Ability</fullName>
                </value>
                <value>
                    <fullName>Middle Ability</fullName>
                </value>
                <value>
                    <fullName>Low Ability</fullName>
                </value>
                <value>
                    <fullName>Below Level of Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Questionnaires &amp; Teacher Recommendations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires &amp; Teacher Recommendations</pluralLabel>
    <recordTypes>
        <fullName>Admissions_Assessment</fullName>
        <active>true</active>
        <label>Admissions Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Questionnaire</fullName>
        <active>true</active>
        <label>Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Recommendation_Pre</fullName>
        <active>true</active>
        <label>Teacher Recommendation (Pre)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Recommendation_Pri_Sec</fullName>
        <active>true</active>
        <label>Teacher Recommendation (Pri &amp; Sec)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Recommendation_Request</fullName>
        <active>true</active>
        <label>Teacher Recommendation Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Change_of_Email_Add_Once_Sent</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISCHANGED(Teachers_Email__c),
       ISCHANGED(Teachers_Name__c)
       ),
    Recommendation_Status__c != &quot;Request Not Sent&quot;
    )</errorConditionFormula>
        <errorMessage>You cannot change the teacher name or email once it has been sent. If you need to send a request to a new recipient then please cancel this request and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Duplicate_Teacher_Submissions</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;Teacher_Recommendation&quot;),
    $User.Id = &quot;0056F000008t9Xb&quot;,
    PRIORVALUE(Submitted_Online__c) = TRUE
    )</errorConditionFormula>
        <errorMessage>This form has already been submitted to us. If you wish to make amendments to your previous responses or would like to complete the form again then please contact the person who originally sent the form to you by email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_Once_Cancelled_Internal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    PRIORVALUE(Send_Request_Cancellation__c) = TRUE,
    $User.Id != &quot;0056F000008t9Xb&quot;,
    $User.Id != &quot;0056F000008tfhZ&quot;
    )</errorConditionFormula>
        <errorMessage>This request has already been cancelled. Please create a new record to process a new recommendation request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_Once_Cancelled_Submitter</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    PRIORVALUE(Send_Request_Cancellation__c) = TRUE,
    $User.Id = &quot;0056F000008t9Xb&quot;
    )</errorConditionFormula>
        <errorMessage>This recommendation request has already been cancelled by the initial sender, meaning that it is no longer required and cannot be submitted. You should have received an email informing you of this. We apologise if this was somehow not received.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( OR((LEN(Time__c)=5), Time__c=&quot;&quot;),false,true)</errorConditionFormula>
        <errorDisplayField>Time__c</errorDisplayField>
        <errorMessage>Format of time must be XX:XX</errorMessage>
    </validationRules>
</CustomObject>